--- a/desafio/src/main/resources/application.properties
+++ b/desafio/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=desafio
-spring.datasource.url=jdbc:h2:mem:meubanco
+spring.datasource.url=jdbc:h2:file:./data/banco
+spring.h2.console.enabled=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
